--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
     <footer>
     
     <div>
-        <a href="http://" target="_blank" rel="noopener noreferrer"><img src="imagenes/faceicon.png" alt=""></a>
-        <a href="http://" target="_blank" rel="noopener noreferrer"><img src="imagenes/twiticon.png" alt=""></a>
-        <a href="http://" target="_blank" rel="noopener noreferrer"><img src="imagenes/instaicon.png" alt=""></a>
-        <a href="http://" target="_blank" rel="noopener noreferrer"><img src="imagenes/giticon.png" alt=""></a>
+        <a href="https://es-la.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="imagenes/faceicon.png" alt=""></a>
+        <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer"><img src="imagenes/twiticon.png" alt=""></a>
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="imagenes/instaicon.png" alt=""></a>
+        <a href="http://github.com" target="_blank" rel="noopener noreferrer"><img src="imagenes/giticon.png" alt=""></a>
     
-        <br><h3>© Copyright 2023, El Mercadillo!. Todos los derechos reservados.</h3></div>
+        <br><h3>© Copyright 2023, El Mercadillo!. Todos los derechos reservados.</h3>
+    </div>
     </footer>
 </body>
 </html>
